--- a/Personal Deatils HTMl/templates/Personal_Details.html
+++ b/Personal Deatils HTMl/templates/Personal_Details.html
@@ -47,7 +47,7 @@ P    {color: red;}
   <input type="text" name="Addr_Line_1" placeholder="Adress line 1 "  required>
   <input type="text" name="Addr_Line_2" placeholder="Adress line 2" >
   <input type="text" name="City" placeholder="Enter city name" required><br><br>
-  <input type="text" name="State" placeholder="Enter the stste" required >
+  <input type="text" name="State" placeholder="Enter the state" required >
   <input type="number" name="PIN" placeholder="Enter pin code" required >
   <br><br>
   
