--- a/Personal Deatils HTMl/templates/Personal_Details.html
+++ b/Personal Deatils HTMl/templates/Personal_Details.html
@@ -9,8 +9,26 @@
 body {background-color: LightGray;}
 h2   {color: blue;}
 P    {color: red;}
+</style>
+  <style type="text/css">
+#submit {
+ background-color: rgb(100, 33, 33);
+ padding: .5em;
+ -moz-border-radius: 5px;
+ -webkit-border-radius: 5px;
+ border-radius: 6px;
+ color: #fff;
+ font-family: 'Oswald';
+ font-size: 20px;
+ text-decoration: none;
+ border: none;
+}
 
-
+#submit:hover {
+ border: none;
+ background: orange;
+ box-shadow: 0px 0px 1px #777;
+}
 </style>
 
 
@@ -53,7 +71,7 @@ P    {color: red;}
   
   
   <br>
-  <input type="submit" value="Submit" >
+  <button id="submit">Submit</button>
 </form> 
 
 <p>Click Submit to upload</p>
