--- a/Login/templates/login.html
+++ b/Login/templates/login.html
@@ -15,9 +15,11 @@
 <div class="control-group">
 				<input type="password" class="login-field" value="" placeholder="password" name="password">
 <label class="login-field-icon fui-lock" for="login-pass"></label></div>
-<input type="submit" value="Log in" class="btn btn-primary btn-large btn-block" name = "s1">
+<input type="submit" value="Log in" class="btn btn-primary btn-large btn-block">
 
 </div>
 </div>
 </div>
 </form>
+{% include "include/_message.html "%}
+
