--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html>
-<body style="background-color:powderblue;">
+ 	 	 	<link rel="stylesheet" href="/static/style.css" type="text/css">
 
-<style>
-p    {color: red;}
-</style>
-<style>
-b.ex1{
-	margin-left:300px;
-}
-</style>
 
 <center>
 <h2 style="color:#e67050;">Registration Page</h2>
 </center>
-
 <form action="/insertReg" method = "post">
 
   <b class="ex1">Employee ID</b>:
@@ -68,8 +57,6 @@ b.ex1{
   <br>
   <input type="submit" value="Submit">
 </form> 
-
 <p>Click Submit to upload</p>
+{% include "include/_message.html "%}
 
-</body>
-</html>
