--- a/ATTENDANCE_CODE/templates/atten.html
+++ b/ATTENDANCE_CODE/templates/atten.html
@@ -29,7 +29,8 @@
   <input type="submit" value="Submit">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+<p>click the "Submit" button</p>
+{% include "include/_message.html "%}	
 
 </body>
 </html>
