--- a/ATTENDANCE_CODE/templates/atten.html
+++ b/ATTENDANCE_CODE/templates/atten.html
@@ -12,16 +12,16 @@
 
 <form action="/getvalue1" method = "POST">
   Employee_ID:<br>
-  <input type="text" name="e_id">
+  <input type="text" name="e_id" required>
   <br>
   Date:<br>
-  <input type="date" name="Date">
+  <input type="date" name="Date" required>
   <br>
   Punch_In:<br>
-  <input type="time" name="Punch_In">
+  <input type="time" name="Punch_In" required>
   <br>
   Punch_Out:<br>
-  <input type="time" name="Punch_Out">
+  <input type="time" name="Punch_Out" required>
   <br>
  
 
