--- a/Attendance/templates/atten.html
+++ b/Attendance/templates/atten.html
@@ -10,18 +10,18 @@
 	
 <h2>Attendence</h2>
 
-<form action="/getvalue1" method = "POST">
+<form action="/hi" method = "POST">
   Employee_ID:<br>
-  <input type="text" name="e_id">
+  <input type="text" name="e_id" required>
   <br>
   Date:<br>
-  <input type="date" name="Date">
+  <input type="date" name="Date" required>
   <br>
   Punch_In:<br>
-  <input type="time" name="Punch_In">
+  <input type="time" name="Punch_In" required>
   <br>
   Punch_Out:<br>
-  <input type="time" name="Punch_Out">
+  <input type="time" name="Punch_Out" required>
   <br>
  
 
@@ -29,7 +29,7 @@
   <input type="submit" value="Submit">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
-
+<p>click the "Submit" button</p>
+{% include "include/_message.html "%}
 </body>
 </html>
