--- a/integration stage 1/templates/old_registration.html
+++ b/integration stage 1/templates/old_registration.html
@@ -4,14 +4,53 @@
       <link rel="stylesheet" href="/static/style.css" type="text/css">
   </head>
 <body style="background-color:powderblue;">
-  <ul class="menu">
-    <br><a href="{{ url_for('dropsession3') }}">Home page</a>
-    <a href="{{ url_for('dropsession1') }}">Registration</a>
-    <a href="{{ url_for('dropsession2') }}">Personal Details</a>
-    <a href="{{ url_for('dropsession') }}">Logout</a>
-</ul>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+    body {margin:0;}
+    
+    .navbar {
+      overflow: hidden;
+      background-color: #333;
+      position: fixed;
+      top: 0;
+      width: 95%;
+    }
+    
+    .navbar a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+    
+    .navbar a:hover {
+      background: #ddd;
+      color: black;
+    }
+    
+    .main {
+      padding: 16px;
+      margin-top: 25px;
+      height: 1500px; /* Used in this example to enable scrolling */
+    }
+    </style>
+    </head>
+    <body>
+    
+    <div class="navbar">
+        <ul class="menu">
+            <br><a href="{{ url_for('dropsession3') }}">Home page</a>
+            <a href="{{ url_for('dropsession2') }}">Personal Details</a>
+            <a href="{{ url_for('dropsession') }}">Logout</a>
+        </ul>
+    </div>
+  
 
 <center>
+  <br><br>
 <h2 style="color:#e67050;">Registration Page</h2>
 
 
