--- a/integration stage 1/templates/Personal_Details.html
+++ b/integration stage 1/templates/Personal_Details.html
@@ -71,6 +71,7 @@ P    {color: rgb(156, 38, 38);}
         <ul class="menu">
             <br><a href="{{ url_for('dropsession3') }}">Home page</a>
             <a href="{{ url_for('dropsession1') }}">Registration</a>
+            <a href="{{ url_for('dropsession4') }}"> Attendance</a>
             <a href="{{ url_for('dropsession') }}">Logout</a>
         </ul>
      </div>
