--- a/integration stage 1/templates/protected.html
+++ b/integration stage 1/templates/protected.html
@@ -59,6 +59,7 @@ body {margin:0;}
                 <ul class="menu">
                                 <a href="{{ url_for('dropsession1') }}">  Registration</a>
                                 <a href="{{ url_for('dropsession2') }}">  Personal Details</a>
+                                <a href="{{ url_for('dropsession4') }}"> Attendance</a>
                                 <a href="{{ url_for('dropsession') }}">  Logout</a>
                             </ul>
 </div>
