--- a/integration stage 1/templates/old_registration.html
+++ b/integration stage 1/templates/old_registration.html
@@ -44,6 +44,7 @@
         <ul class="menu">
             <br><a href="{{ url_for('dropsession3') }}">Home page</a>
             <a href="{{ url_for('dropsession2') }}">Personal Details</a>
+            <a href="{{ url_for('dropsession4') }}"> Attendance</a>
             <a href="{{ url_for('dropsession') }}">Logout</a>
         </ul>
     </div>
@@ -56,16 +57,16 @@
 
 <form action="/insertReg" method = "post">
 
-  <b class="ex1">Employee ID</b>:
-  <input type="text" name="e_id" >
+  <b class="ex1" >Employee ID</b>:
+  <input type="text" name="e_id" required>
   <br><br>
  
    <b class="ex1">Employee DOJ</b>:
-  <input type="date" name="e_doj" >
+  <input type="date" name="e_doj" required>
   <br><br>
   
     <b class="ex1">Department</b>:
-  <select name= "e_dep">
+  <select name= "e_dep" required>
   <option value="IIOT">IIOT</option>
   <option value="Analytics">Analytics</option>
   <option value="Networking">Networking</option>
@@ -73,7 +74,7 @@
   </select>
   
   <br><br><b class="ex1">Designation</b>:
-  <select name= "e_des">
+  <select name= "e_des" required>
   <option value="Trainee Engg">Trainee Engg</option>
   <option value="Junior Engg">Junior Engg</option>
   <option value="Senioir Engg">Senioir Engg</option>
@@ -81,27 +82,27 @@
    </select>
    
   <br><br><b class="ex1">Employee Firstname</b>:
-  <input type="text" name="e_fname" >
+  <input type="text" name="e_fname" required>
   <br><br>
   
   <b class="ex1">Employee Lastname</b>:
-  <input type="text" name="e_lname" >
+  <input type="text" name="e_lname" required>
   <br><br>
   
   <b class="ex1">Email ID(Organisational)</b>:
-  <input type="email" name="e_oemail" >
+  <input type="email" name="e_oemail" required>
   <br><br>
   
   <b class="ex1">Reporting Manager</b>:
-  <input type="text" name="e_repman" >
+  <input type="text" name="e_repman" required>
   <br><br>
   
   <b class="ex1">Employee Phone Number</b>:
-  <input type="text" name="e_ph" >
+  <input type="text" name="e_ph" required>
   <br><br>
   
    <b class="ex1">Email ID(Personal)</b>:
-  <input type="email" name="e_pemail" >
+  <input type="email" name="e_pemail" required>
   <br><br>
   
   <br>
